# lab06

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
